--- a/app/src/main/res/layout/activity_bluetooth2.xml
+++ b/app/src/main/res/layout/activity_bluetooth2.xml
@@ -6,4 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".BluetoothActivity">
 
+    <Button
+        android:id="@+id/textToSpeechButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="144dp"
+        android:layout_marginLeft="144dp"
+        android:layout_marginTop="356dp"
+        android:text="Button"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
