--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,42 +6,35 @@
     android:layout_height="match_parent"
     tools:context=".MainActivity">
 
-    <!--<TextureView
-        android:id="@+id/cameraViewId"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toTopOf="@+id/relativeLayoutId"
-        app:layout_constraintEnd_toEndOf="parent"
+    <include
+        android:id="@+id/toolbarId"
+        layout="@layout/custom_toolbar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <RelativeLayout
-        android:id="@+id/relativeLayoutId"
-        android:layout_width="wrap_content"
-        android:layout_height="200dp"
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/bottom_nav"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:background="@drawable/top_rounded_bar_corners"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/cameraViewId">
+        app:menu="@menu/bar_menu" />
 
-    <TextView
-        android:id="@+id/predictedTextViewId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:text="Here will be the result" />
-
-    </RelativeLayout>-->
-
-
-    <ImageButton
-        android:id="@+id/captureImageButtonId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <ImageView
+        android:id="@+id/backgroundImageId"
+        android:layout_width="256dp"
+        android:layout_height="256dp"
+        android:layout_marginTop="180dp"
+        android:alpha="0.4"
+        android:background="@color/cardview_light_background"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_nav"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/ic_baseline_camera_24" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbarId"
+        app:layout_constraintVertical_bias="0.065"
+        app:srcCompat="@drawable/image_without_bg_2" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
