--- a/app/src/main/res/layout-v21/top_navigation_bar.xml
+++ b/app/src/main/res/layout-v21/top_navigation_bar.xml
@@ -2,7 +2,7 @@
 <androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/bottom_rounded_bar_corners"
+    android:background="@color/colorPrimaryDark"
     android:elevation="4dp">
 
 </androidx.appcompat.widget.Toolbar>
