--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,7 @@
 
     <include
         android:id="@+id/toolbarId"
-        layout="@layout/custom_toolbar"
+        layout="@layout/top_navigation_bar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
