--- a/app/src/main/res/layout/custom_switch_layout.xml
+++ b/app/src/main/res/layout/custom_switch_layout.xml
@@ -5,19 +5,11 @@
     android:layout_height="match_parent"
     android:layout_width="fill_parent"
     android:orientation="horizontal">
-
-    <ImageView
-        android:id="@+id/imageViewModeId"
+    <androidx.appcompat.widget.SwitchCompat android:id="@+id/themeSwitchId"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        app:srcCompat="@drawable/ic_baseline_bedtime_24"
-        android:layout_toStartOf="@+id/themeSwitchId"
-        android:layout_toLeftOf="@+id/themeSwitchId" />
-
-    <Switch android:id="@+id/themeSwitchId"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"/>
+        android:layout_alignParentRight="true"
+        android:layout_alignParentEnd="true" />
 
 
 </RelativeLayout>
