--- a/app/src/main/res/menu/example_menu_bar.xml
+++ b/app/src/main/res/menu/example_menu_bar.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item android:id="@+id/lightDarkId"
         android:title=""
-        app:showAsAction="ifRoom"
+        app:showAsAction="always"
         app:actionLayout="@layout/custom_switch_layout"/>
 </menu>
